--- a/AppLovin MAX Demo App - ObjC/Podfile
+++ b/AppLovin MAX Demo App - ObjC/Podfile
@@ -7,5 +7,5 @@ platform :ios, '11.0'
 target 'AppLovin MAX Demo App - ObjC' do
   pod 'AppLovinSDK', '13.0.0'
   pod 'Adjust'
-  pod 'AdStir-Ads-SDK/AppLovinMaxMediationAdapter', '2.17.3'
+  pod 'AdStir-Ads-SDK/AppLovinMaxMediationAdapter', '2.17.3aaaaa'
 end
