--- a/AppLovin MAX Demo App - Swift/Podfile
+++ b/AppLovin MAX Demo App - Swift/Podfile
@@ -7,4 +7,5 @@ platform :ios, '11.0'
 target 'AppLovin MAX Demo App - Swift' do
   pod 'AppLovinSDK'
   pod 'Adjust'
+  pod 'AdStir-Ads-SDK/AppLovinMaxMediationAdapter', '2.17.4'
 end
